# efi_app

./: .gitignore  Cargo.toml  README.md  x86_64-unknown-efi.json
src/: main.rs
tools/: ovmf.fd
